# OGL

./: CMakeLists.txt  main.cpp
ShadersF/: fragment.glsl  vertex.glsl
dep/: CamContr.cpp  CamContr.hpp  camera.cpp  camera.hpp  objLoader.cpp  shader.cpp
